--- a/css/style.css
+++ b/css/style.css
@@ -868,23 +868,32 @@ footer p {
    .welcome {
      margin-left: auto;
      margin-right: auto;
-    float: left;
+     float: left;
+     margin-top: 30px;
    }
 
-   h1 {
-     font-size: 5vh;
-     margin-top: 50px;
-     padding-left: 20px;
-     padding-right: 20px;
-   }
 
-   .hero p {
-     font-size: 2vh;
-     padding: 20px;
-     width: 350px;
-     margin-bottom: 20px;
-     margin-right: 50px;
-   }
+      h1 {
+        font-size: 3vh;
+        margin-top: 30px;
+        margin-left: 30px;
+        width: 200px;
+      }
+
+      .hero p {
+        font-size: 3vh;
+        margin-bottom: 20px;
+        margin-left: 30px;
+        width: 200px;
+      }
+
+      h6 {
+        font-size: 3vh;
+        margin-top: 20px;
+        margin-left: 30px;
+        width: 200px;
+      }
+
 
    .projects {
     display: flex;
@@ -893,6 +902,20 @@ footer p {
     justify-content: center;
     align-items: center;
   }
+
+  .fa-angle-down  {
+    margin-left: 180px;
+    margin-right: auto;
+    margin-top: 20px;
+    border: none;
+    outline: none;
+    background-color: #FF94D4;
+    color: white;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 50%;
+    }
+
 
   /* navigation bar */
   .navbar {
@@ -962,7 +985,7 @@ footer p {
   }
 
 .main {
-    margin-top: 300px;
+    margin-top: 600px;
 }
 
 #myBtn {
@@ -984,7 +1007,11 @@ footer p {
   background-color: #FFB2E0;
 }
 
-
+.project_content {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
  /* about me */
 
  .aboutmehero {
@@ -1124,20 +1151,30 @@ footer p {
      max-width: 700px;
      margin-left: auto;
      margin-right: auto;
-    float: left;
+     float: left;
+     margin-top: 30px;
    }
 
 
    h1 {
      font-size: 3vh;
      margin-top: 30px;
+     margin-left: 30px;
+     width: 200px;
    }
 
    .hero p {
      font-size: 3vh;
-     width: 350px;
      margin-bottom: 20px;
-     margin-right: 50px;
+     margin-left: 30px;
+     width: 200px;
+   }
+
+   h6 {
+     font-size: 3vh;
+     margin-top: 20px;
+     margin-left: 30px;
+     width: 200px;
    }
 
    .projects {
@@ -1148,7 +1185,18 @@ footer p {
     align-items: center;
   }
 
-
+  .fa-angle-down  {
+    margin-left: 180px;
+    margin-right: auto;
+    margin-top: 20px;
+    border: none;
+    outline: none;
+    background-color: #FF94D4;
+    color: white;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 50%;
+    }
 
     #myBtn {
       display: none;
@@ -1237,9 +1285,14 @@ footer p {
   }
 
   .main {
-      margin-top: 300px;
+      margin-top: 600px;
   }
 
+  .project_content {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
  /* about me */
  h2 {
    font-family: 'Nunito', Arial, Helvetica, sans-serif;
