--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h6 {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-size: 3vh;
   line-height: 167%;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-left: 30px;
   text-align:left;
   width: 600px;
@@ -141,9 +141,9 @@ h6 {
   display: block;
   max-width: 1000px;
   text-align: left;
-  margin-left:150px;
+  margin-left:300px;
   margin-right: 150px;
-  margin-top: 200px;
+  margin-top: 150px;
 }
 
 .hero {
@@ -156,7 +156,7 @@ h6 {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-size: 4vh;
   line-height: 160%;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-left: 30px;
   text-align:left;
   width: 600px;
@@ -164,15 +164,16 @@ h6 {
 
 
 .fa-angle-down  {
-  margin-left: 550px;
-  margin-top: 50px;
+  margin-left: 400px;
+  margin-top: 90px;
   border: none;
   outline: none;
-  background-color: #FF94D4;
+  background-color: #FFCAEA;
   color: white;
   cursor: pointer;
   padding: 10px 15px;
   border-radius: 50%;
+
   }
 
 
@@ -193,7 +194,7 @@ h6 {
  }
 
  #myBtn:hover {
-   background-color: #FFB2E0;
+   background-color: #FFCAEA;
  }
 
 
@@ -239,7 +240,7 @@ h6 {
 
 
  .highlight {
-     background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #FFB2E0 50%);
+     background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #FFCAEA 50%);
    }
 
 /* end */
@@ -877,21 +878,21 @@ footer p {
         font-size: 3vh;
         margin-top: 30px;
         margin-left: 30px;
-        width: 200px;
+        width: 300px;
       }
 
       .hero p {
         font-size: 3vh;
         margin-bottom: 20px;
         margin-left: 30px;
-        width: 200px;
+        width: 300px;
       }
 
       h6 {
         font-size: 3vh;
         margin-top: 20px;
         margin-left: 30px;
-        width: 200px;
+        width: 300px;
       }
 
 
@@ -906,7 +907,7 @@ footer p {
   .fa-angle-down  {
     margin-left: 180px;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 40px;
     border: none;
     outline: none;
     background-color: #FF94D4;
@@ -985,7 +986,7 @@ footer p {
   }
 
 .main {
-    margin-top: 600px;
+    margin-top: 400px;
 }
 
 #myBtn {
@@ -1160,21 +1161,21 @@ footer p {
      font-size: 3vh;
      margin-top: 30px;
      margin-left: 30px;
-     width: 200px;
+     width: 300px;
    }
 
    .hero p {
      font-size: 3vh;
      margin-bottom: 20px;
      margin-left: 30px;
-     width: 200px;
+     width: 300px;
    }
 
    h6 {
      font-size: 3vh;
      margin-top: 20px;
      margin-left: 30px;
-     width: 200px;
+     width: 300px;
    }
 
    .projects {
@@ -1188,7 +1189,7 @@ footer p {
   .fa-angle-down  {
     margin-left: 180px;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 40px;
     border: none;
     outline: none;
     background-color: #FF94D4;
@@ -1285,7 +1286,7 @@ footer p {
   }
 
   .main {
-      margin-top: 600px;
+      margin-top: 400px;
   }
 
   .project_content {
