--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ h2 {
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   font-size: 3vh;
   line-height: 150%;
-  margin: 20px;
+  margin: 40px;
   font-weight: 900;
 }
 
@@ -248,6 +248,28 @@ h6 {
 
   /* case studies */
 
+  .header-box {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+  }
+
+  .info-section {
+    width: 300px;
+    margin: 10px;
+    text-align: center;
+  }
+
+
+
+
+.info-section li {
+  list-style: none;
+  padding: 15px;
+
+}
 
 .projecthero {
       background-color: white;
@@ -510,9 +532,7 @@ h6 {
       width: 70%;
   }
 
-.wireframes {
-  color: light-gray;
-}
+
 /* medchat */
 
 .medchatmockup {
@@ -1337,7 +1357,6 @@ footer p {
    }
 
    /* trove project */
-
    .projecthero {
     height: auto;
     display: block;
