--- a/css/style.css
+++ b/css/style.css
@@ -890,22 +890,22 @@ footer p {
      margin-left: auto;
      margin-right: auto;
      float: left;
-     margin-top: 30px;
+     margin-top: 100px;
    }
 
 
       h1 {
-        font-size: 3vh;
+        font-size: 2.5vh;
         margin-top: 30px;
-        margin-left: 30px;
-        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       .hero p {
-        font-size: 3vh;
+        font-size: 2.5vh;
         margin-bottom: 20px;
-        margin-left: 30px;
-        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       h6 {
@@ -1184,27 +1184,27 @@ footer p {
    }
 
    .welcome {
-     max-width: 700px;
      margin-left: auto;
      margin-right: auto;
      float: left;
-     margin-top: 30px;
+     margin-top: 100px;
    }
 
 
-   h1 {
-     font-size: 3vh;
-     margin-top: 30px;
-     margin-left: 30px;
-     width: 300px;
-   }
+      h1 {
+        font-size: 2.5vh;
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
-   .hero p {
-     font-size: 3vh;
-     margin-bottom: 20px;
-     margin-left: 30px;
-     width: 300px;
-   }
+      .hero p {
+        font-size: 2.5vh;
+        margin-bottom: 20px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
 
    h6 {
      font-size: 3vh;
