--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav {
   text-align: center;
   font-weight: bold;
   text-decoration: none;
-  border-bottom: 3px solid #FFB2E0;
+  border-bottom: 3px solid #64ccbb;
 
 }
 
@@ -127,7 +127,7 @@ nav {
   text-align: center;
   font-weight: bold;
   text-decoration: none;
-  border-bottom: 3px solid #FFB2E0;
+  border-bottom: 3px solid #64ccbb;
 
 }
 
@@ -605,7 +605,7 @@ div.scrollmenu a:hover {
     }
 
 .aboutmemain blockquote {
-      border-left: 4px solid #FFB2E0;
+      border-left: 4px solid #64ccbb;
       height: 200px;
       margin-left: 150px;
       margin-right: 150px;
@@ -935,11 +935,11 @@ footer p {
     }
 
 .footer a:hover {
-      color: #FFB2E0;
+      color: #64ccbb;
     }
 
 .footer a:active {
-      color: #FFB2E0;
+      color: #64ccbb;
     }
 
 @media only screen and (max-width: 600px) {
@@ -1055,11 +1055,11 @@ footer p {
   }
 
   .navbarlinks a:hover {
-    border-bottom: 3px solid #FFB2E0;
+    border-bottom: 3px solid #64ccbb;
   }
 
   .navbarlinks a:active {
-    border-bottom: 3px solid #FFB2E0;
+    border-bottom: 3px solid #64ccbb;
   }
 
   #logo  {
@@ -1408,11 +1408,11 @@ footer p {
   }
 
   .navbarlinks a:hover {
-    border-bottom: 3px solid #FFB2E0;
+    border-bottom: 3px solid #64ccbb;
   }
 
   .navbarlinks a:active {
-    border-bottom: 3px solid #FFB2E0;
+    border-bottom: 3px solid #64ccbb;
   }
 
   #logo  {
@@ -1466,7 +1466,7 @@ footer p {
      margin-right: auto;
      line-height: 167%;
      padding: 20px;
-     border-left: 4px solid #FFB2E0;
+     border-left: 4px solid #64ccbb;
      width: 70%;
    }
 
